changed by stevenyan

--- a/forecast/src/main/resources/microservice.yaml
+++ b/forecast/src/main/resources/microservice.yaml
@@ -6,12 +6,12 @@ servicecomb:
     properties:
       allowCrossApp: false
     registry:
-      address: https://cse.cn-north-1.myhuaweicloud.com
+      address: https://cse.cn-southwest-2.myhuaweicloud.com
       instance:
         watch: false
   config:
     client:
-      serverUri: https://cse.cn-north-1.myhuaweicloud.com
+      serverUri: https://cse.cn-southwest-2.myhuaweicloud.com
       refreshMode: 1
       refresh_interval: 5000
   rest:
@@ -27,9 +27,9 @@ servicecomb:
     pattern: "%h %{dd/MMM/yyyy:HH:mm:ss.SSSZ|GMT+0008|en_US}t %r %s %B %D"
 
 # TODO: 使用微服务引擎专业版部署之前，需要配置 AK/SK
-#  credentials:
-#    akskEnabled: true
-#    accessKey: add your ak/sk from huaweicloud
-#    secretKey: add your ak/sk from huaweicloud
-#    akskCustomCipher: default
-#    project: cn-south-1
+  credentials:
+    akskEnabled: true
+    accessKey: SFDXKMRXBXMT1STPTZ1Q
+    secretKey: r71wr8opOdk1dw19ttSXXDdny9OAKqqabdWRli6D
+    akskCustomCipher: default
+    project: cn-southwest-2
